--- a/src/ESRIRegAsmConsole.csproj
+++ b/src/ESRIRegAsmConsole.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Arguments.cs" />
     <Compile Include="ArgumentsParser.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
