Switched submodule to https://github.com/r-pankevicius/command-line-parser.git (issue fixed)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/lecode-official-command-line-parser"]
-	path = lib/lecode-official-command-line-parser
-	url = https://github.com/lecode-official/command-line-parser.git
+[submodule "lib/command-line-parser"]
+	path = lib/command-line-parser
+	url = https://github.com/r-pankevicius/command-line-parser.git
