--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/command-line-parser"]
-	path = lib/command-line-parser
-	url = ../command-line-parser.git
+[submodule "command-line-parser"]
+	path = command-line-parser
+	url = https://github.com/r-pankevicius/command-line-parser.git
